# maibo

./: .gitmodules  CMakeLists.txt  README.md  index.html
code/common/maibo/: Application.cpp  Application.h  Dependencies.h  EntryPoint.cpp  MainWindow.cpp  MainWindow.h  Task.h  TaskManager.cpp  TaskManager.h
code/common/maibo/Assets/: FileManager.cpp  FileManager.h
code/common/maibo/Common/: Future.h  ResourceTask.h  high_res_clock.cpp  string.h
code/common/maibo/Rendering/: GPUProgram.cpp  GPUProgram.h  GPUProgramPtr.h  RenderTarget.cpp  RenderTarget.h  RenderTargetManager.cpp  RenderTargetManager.h  Shader.cpp  ShaderType.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
code/common/maibo/Rendering/Sprites/: Atlas.cpp  Atlas.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  Tileset.cpp  Tileset.h
code/common/maibo/Resources/: ResourceFuture.h  ResourceManager.cpp  ResourceManager.h  ResourceTask.h
code/common/maibo/States/: ResourceFutureState.cpp  ResourceFutureState.h  WaitForFuturesState.cpp  WaitForFuturesState.h
code/common/maibo/pch/: MaiBo.pch.h
code/maibo/: Application.cpp  Dependencies.h  EntryPoint.cpp  MainWindow.cpp  RenderTarget.cpp  RenderTargetManager.h  ResourceFuture.h  ResourceFutureState.h  ResourceManager.cpp  ResourceManager.h  ShaderPtr.h  Texture.cpp
code/maibo/GUI/ImGui/: ImGuiManager.cpp
code/maibo/GUI/LibRocket/: LibRocketLayer.h  LibRocketRenderInterface.cpp  LibRocketSystemInterface.cpp  LibRocketSystemInterface.h
code/maibo/joypad/: JoyPad.h  RenderInterface.h  RenderTypes.h
code/maibo/lib/: high_res_clock.h
code/maibo/lib/Signals/: Signal.h
examples/: .gitignore
examples/BlockOut3000/: CMakeLists.txt  README.md  copy_windows_dlls.bat  index.html  test.txt
examples/BlockOut3000/android/: .gitignore  AndroidManifest.xml  build.xml
examples/BlockOut3000/android/assets/: .gitignore
examples/BlockOut3000/android/res/values/: strings.xml
examples/BlockOut3000/android/src/com/maibo/blockout/: BlockOut3000.java
examples/BlockOut3000/android/src/org/libsdl/app/: SDLActivity.java
examples/BlockOut3000/resources/: pos.vert  test.txt  u_color.frag
examples/BlockOut3000/resources/gui/: main.css  main.xml
examples/BlockOut3000/src/: BlockOut.cpp  BlockOut.h  BlockOut.pch.cpp  BlockOut.pch.h  CubeTemplate.cpp  CubeTemplate.h  Figure.cpp  Figure.h  FigureManager.cpp  FigureManager.h  FigureSet.cpp  FigureSet.h  FigureTemplate.cpp  FigureTemplate.h  Level.cpp  Level.h  LevelLayerPreview.cpp  LevelLayerPreview.h  LoadAllState.cpp  LoadAllState.h  LoadFigureSetsTask.cpp  LoadFigureSetsTask.h  MainMenuState.cpp  MainMenuState.h  PlayingState.cpp  PlayingState.h  Preferences.cpp  Preferences.h  Primitives.h  Random.h  Resources.cpp  Resources.h  SimpleLexer.cpp  SimpleLexer.h  UniformColorMaterial.cpp  UniformColorMaterial.h
examples/JoyPad/: CMakeLists.txt  README.md
examples/JoyPad/resources/: simple.frag  simple.vert
examples/JoyPad/src/: JoyPad.pch.cpp  JoyPad.pch.h  JoyPadApp.cpp  JoyPadApp.h  JoyPadState.cpp  JoyPadState.h  PlatformerDemo.cpp  PlatformerDemo.h
include/maibo/: AppState.h  AppStateManager.h  Application.h  Dependencies.h  ExplicitSingleton.h  Future.h  GPUProgram.h  ImplicitSingleton.h  InputEventHandler.h  MainWindow.h  Manager.h  RenderTarget.h  RenderTargetManager.h  ResourceFuture.h  ResourceFutureState.h  ResourceManager.h  Shader.h  Task.h  TaskManager.h  Texture.h  TexturePtr.h
include/maibo/GUI/ImGui/: ImGuiManager.h
include/maibo/GUI/LibRocket/: LibRocketManager.h  LibRocketRenderInterface.h
include/maibo/lib/: GLSentries.h  Macros.h  memory.h  simplified_rng.h
include/maibo/lib/Signals/: AutoSlot.h  Signal.h  Slot.h
plugins/ImGui/code/maibo/GUI/ImGui/: ImGuiManager.cpp  ImGuiManager.h
plugins/JoyPad/code/maibo/JoyPad/: Action.h  JoyPad.cpp  RenderTypes.h
plugins/LibRocket/: LibRocketManager.cpp
src/: AppStateManager.cpp  Application.cpp  EntryPoint.cpp  GPUProgram.cpp  ImGuiManager.cpp  LibRocketLayer.cpp  LibRocketRenderInterface.cpp  MaiBo.pch.cpp  MaiBo.pch.h  MainWindow.cpp  ResourceFutureState.cpp  ResourceManager.cpp  ResourceTask.h  Shader.cpp  TaskManager.cpp  Texture.cpp
tools/NewProject/: CMakeLists.txt  index.html
tools/NewProject/src/: MyApplication.cpp  MyApplication.h  MyProject.pch.cpp  MyProject.pch.h  MyState.cpp  MyState.h
